@@ -5,18 +5,13 @@ from eea.themecentre.browser.portlets.catalog import BasePortlet
 from eea.themecentre.themecentre import getTheme, getThemeTitle, getThemeCentre
 from zExceptions import NotFound
 from zope.component import getUtility
-#TODO: fix me
-#from eea.rdfrepository.interfaces import IRDFRepository
-#TODO: fix me
-#from eea.rdfrepository.utils import getRdfPortletData
+from eea.rdfrepository.interfaces import IRDFRepository
+from eea.rdfrepository.utils import getRdfPortletData
 #TODO: fix me
 #from Products.EEAContentTypes.interfaces import IFeedPortletInfo
 #TODO: fix me
 # - just delete the dummy interfaces and fuction
 from zope.interface import Interface
-class IFeedPortletInfo(Interface):
-    """ Dummy interface
-    """
 class IFeedPortletInfo(Interface):
     """ Dummy interface
     """
@@ -27,9 +22,7 @@ class RDFPortlet(BasePortlet):
     def short_items(self):
         context = utils.context(self)
         currentThemeCentre = getThemeCentre(context)
-        #TODO: fix me
-        #return getRdfPortletData(currentThemeCentre, max_items=3)
-        return []
+        return getRdfPortletData(currentThemeCentre, max_items=3)
 
     def full_items(self):
         feed_id = self.request.get('feed')
