@@ -1,5 +1,5 @@
 <configure xmlns="http://namespaces.zope.org/zope"
-  i18n_domain="eea.themecentre">
+           i18n_domain="eea">
 
   <permission
     id="eea.PromoteThemeCentre"
