@@ -1,0 +1,13 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+           i18n_domain="eea">
+
+  <genericsetup:registerProfile
+    name="default"
+    title="EEA Theme Centre"
+    directory="profiles/default"
+    description="Profile for EEA Theme Centre"
+    provides="Products.GenericSetup.interfaces.EXTENSION"
+    />
+
+</configure>
