@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<metadata>
+ <description>eea.themecentre profile</description>
+ <version>1</version>
+</metadata>
