@@ -6,6 +6,7 @@ Changelog
 4.0-dev - (unreleased)
 ----------------------
  * TODO: "themes" vocabulary should be add from here?
+ * TODO: cleanup eea.rdfrepository dependency
  * TODO: fix all #TODO:
  * TODO: fix tests
  * TODO: add builds on Jenkins
